--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,41 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+button:hover {
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+  transform: scale(1.05);
+}
+
+/* expiremental */
+
+/* button:hover {
+  box-shadow: 0 8px 20px rgba(255, 0, 124, 1), 0 0 30px rgba(255, 174, 0, 0.75), 0 0 50px rgba(30, 144, 255, 0.75);
+  transform: scale(1.2) rotate(10deg);
+  animation: bounce-animation 1s infinite; 
+} 
+*/
+
+/* Gradient Background Animation */
+/* @keyframes gradient-animation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+} */
+
+/* Bounce Animation */
+/* @keyframes bounce-animation {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px) scale(1.2) rotate(10deg);
+  }
+} */
